[package]
name = "win_mqtt_notify"
version = "0.1.0"
edition = "2021"
# The general section with crate name, license, etc.
build = "build.rs"

[dependencies]
rumqttc = "0.24.0"
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tray-item = "0.10.0"
win-toast-notify = "0.1.6"

[build-dependencies]
embed-resource = "3.0.1"
copy_to_output = "2.1.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
